Вернул красивый дизайн с градиентами и таблицами, улучшил UI

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <main>
             <div class="voting-section">
-                <h2 id="votingTitle">Голосование за лучший проект</h2>
+                <h2 id="votingTitle">Голосование за исключение </h2>
                 <div id="optionsContainer" class="options">
                     <!-- Варианты будут добавляться динамически -->
                 </div>
