да зачем эти пояснения?

--- a/admin.html
+++ b/admin.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div id="loginSection">
-            <h2>🔐 Вход в админ-панель</h2>
+            <h2> Вход в админ-панель</h2>
             <input type="password" id="adminPassword" placeholder="Введите пароль администратора">
             <button onclick="login()">Войти</button>
         </div>
@@ -19,28 +19,28 @@
                 <h1>⚙️ Админ-панель голосования</h1>
                 <div>
                     <a href="index.html">← Назад к голосованию</a>
-                    <button onclick="logout()" style="margin-left: 20px; padding: 10px 20px;">🚪 Выйти</button>
+                    <button onclick="logout()" style="margin-left: 20px; padding: 10px 20px;"> Выйти</button>
                 </div>
             </header>
 
             <main>
                 <div class="admin-controls">
-                    <h2>🎛️ Управление голосованием</h2>
+                    <h2> Управление голосованием</h2>
                     <div class="control-buttons">
-                        <button onclick="startVoting()" class="btn-start">▶️ Запустить голосование</button>
-                        <button onclick="stopVoting()" class="btn-stop">⏹️ Остановить голосование</button>
-                        <button onclick="resetVotes()" class="btn-reset">🔄 Сбросить голоса</button>
+                        <button onclick="startVoting()" class="btn-start"> Запустить голосование</button>
+                        <button onclick="stopVoting()" class="btn-stop"> Остановить голосование</button>
+                        <button onclick="resetVotes()" class="btn-reset"> Сбросить голоса</button>
                     </div>
 
                     <div class="status-panel">
-                        <h3>📊 Статус: <span id="adminStatus">остановлено</span></h3>
-                        <h3>👥 Всего голосов: <span id="totalVotes">0</span></h3>
-                        <h3>👤 Уникальных voters: <span id="uniqueVoters">0</span></h3>
+                        <h3> Статус: <span id="adminStatus">остановлено</span></h3>
+                        <h3> Всего голосов: <span id="totalVotes">0</span></h3>
+                        <h3> Уникальных voters: <span id="uniqueVoters">0</span></h3>
                     </div>
                 </div>
 
                 <div class="admin-options">
-                    <h2>📝 Управление вариантами ответа</h2>
+                    <h2> Управление вариантами ответа</h2>
                     <div class="add-option">
                         <input type="text" id="newOptionText" placeholder="Введите новый вариант ответа">
                         <button onclick="addOption()">➕ Добавить вариант</button>
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="results-admin">
-                    <h2>📈 Детальные результаты</h2>
+                    <h2> Детальные результаты</h2>
                     
                     <!-- Таблица результатов -->
                     <table class="results-table">
