--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Система голосования</title>
+    <title>Система голосования ИНЛИ</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Онлайн голосование</h1>
+            <h1>ИНЛИ голосования</h1>
             <div id="status" class="status stopped">Голосование остановлено</div>
         </header>
 
         <main>
             <div class="voting-section">
-                <h2 id="votingTitle">Голосование за исключение </h2>
+                <h2 id="votingTitle">Голосование</h2>
                 <div id="optionsContainer" class="options">
                     <!-- Варианты будут добавляться динамически -->
                 </div>
